--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,7 @@
 public net.minecraft.client.Minecraft field_71470_ab # debugFPS
 public net.minecraft.util.CombatTracker field_94552_d # inCombat
 public net.minecraft.entity.LivingEntity field_184617_aD # ticksSinceLastSwing
+public net.minecraft.client.renderer.FirstPersonRenderer field_187469_f # equippedProgressMainHand
+public net.minecraft.client.renderer.FirstPersonRenderer field_187471_h # equippedProgressOffHand
+public net.minecraft.client.renderer.FirstPersonRenderer field_187470_g # prevEquippedProgressMainHand
+public net.minecraft.client.renderer.FirstPersonRenderer field_187472_i # prevEquippedProgressOffHand
